完成最基础的项目列表展示,todo:列表分页/加载更多；添加error页面；修正错误：<br>都加上了/ = =

--- a/src/main/resources/static/css/rm.css
+++ b/src/main/resources/static/css/rm.css
@@ -99,3 +99,17 @@
 .project-bottom {
     margin-top: 20px;
 }
+
+#post-project-name{
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+#post-project-description{
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
