完成查看需求帖子的基本功能；测试修正了编辑需求/项目功能；修改model构造器的不妥之处；修改mapper的resultType；删除不必要的ftl文件；需改进：帖子展示数据库加载逻辑；需求/项目分页；明日todo：列表搜索、点赞/评论功能

--- a/src/main/resources/static/css/rm.css
+++ b/src/main/resources/static/css/rm.css
@@ -27,7 +27,7 @@
 }
 
 .reply-container {
-    margin: 10px;
+    margin: 5px;
     padding: 10px;
     border-width: 1px;
     border-color: #666666;
@@ -42,10 +42,11 @@
 }
 
 .reply-right {
+    margin-left: 20px;
 }
 
 .comment-container {
-    margin: 10px;
+    margin: 5px;
     padding: 10px;
     border-width: 1px;
     border-color: #666666;
@@ -78,6 +79,7 @@
 }
 
 .post-right {
+    margin-left: 20px;
 }
 
 .post-bottom {
