--- a/src/main/resources/static/css/rm.css
+++ b/src/main/resources/static/css/rm.css
@@ -115,3 +115,11 @@
     -webkit-box-orient: vertical;
     overflow: hidden;
 }
+
+.management-container {
+    margin: 10px 10px 30px 10px;
+    padding: 10px;
+    border-width: 1px;
+    border-color: #666666;
+    border-style: solid;
+}
