--- a/src/main/resources/static/css/rm.css
+++ b/src/main/resources/static/css/rm.css
@@ -2,6 +2,10 @@ a{
     text-decoration:none;
 }
 
+.full-height{
+    height: 100%;
+}
+
 #global {
     padding-top: 10px;
     padding-left: 20px;
@@ -130,6 +134,15 @@ a{
 
 /*uml*/
 iFrame {
-    width:100%;
-    height: 600px;
+    width: 100%;
+    height: 100%;
+    /*border: 1px #666666 solid;*/
+}
+
+#uml-back{
+    margin-top: 10px;
+}
+
+#uml-left{
+    padding-bottom: 10px;
 }
