--- a/src/main/resources/static/css/rm.css
+++ b/src/main/resources/static/css/rm.css
@@ -1,13 +1,8 @@
-a{
-    text-decoration:none;
-}
-
 .full-height{
     height: 100%;
 }
 
 .global {
-    padding-top: 10px;
     padding-left: 20px;
     padding-right: 20px;
 }
@@ -22,8 +17,13 @@ a{
 }
 
 #navbar-title {
-    padding-left: 10px;
     padding-right: 20px;
+}
+
+#nav-search {
+    width: 140px;
+    border-radius: 20px;
+    background-color: #f9f9f9;
 }
 
 #loginBackground {
@@ -127,6 +127,10 @@ a{
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     overflow: hidden;
+}
+
+#likeIcon {
+    text-decoration:none;
 }
 
 .management-container {
