修改bug，添加删除UML图页面

--- a/src/main/resources/static/css/rm.css
+++ b/src/main/resources/static/css/rm.css
@@ -162,7 +162,7 @@ iFrame {
     border-color: #eeeeee;
     border-style: dashed;
     margin-bottom: 20px;
-    height: 300px;
+    min-height: 300px;
     text-align: center;
 }
 
